limit reg counts by attend

--- a/app/views/office/dashboards/index.html.haml
+++ b/app/views/office/dashboards/index.html.haml
@@ -20,4 +20,4 @@
         #{event.display_name} in #{time_ago_in_words(event.start_date)}
 
       .inner
-        = render 'office/registrations/counts', :registrations => event.registrations
+        = render 'office/registrations/counts', :registrations => event.registrations.attend
