layout fixes, cleanups

--- a/app/views/office/angels/edit.html.haml
+++ b/app/views/office/angels/edit.html.haml
@@ -3,7 +3,7 @@
 
   .content
     = controls do |c|
-      - add_button_to(c, :delete, angel)
+      - add_button_to(c, :delete)
 
     %h2 Editing #{angel.display_name}
 
