--- a/app/views/office/events/edit.html.haml
+++ b/app/views/office/events/edit.html.haml
@@ -1,10 +1,9 @@
 .block
-  = block_navigation do |nav|
-    - nav.item "Edit #{event.display_name}", edit_office_event_path(event), :active => true
+  = block_navigation("Edit #{event.display_name}")
 
   .content
     = controls do |c|
-      - add_button_to(c, :delete, event)
+      - add_button_to(c, :delete)
 
     %h2 Editing #{event.display_name}
 
