--- a/app/views/office/public_signups/edit.html.haml
+++ b/app/views/office/public_signups/edit.html.haml
@@ -3,7 +3,7 @@
 
   .content
     = controls do |c|
-      - add_button_to(c, :delete, public_signup)
+      - add_button_to(c, :delete)
 
     %h2 Editing registration request
 
