--- a/app/views/office/registrations/_roster.html.haml
+++ b/app/views/office/registrations/_roster.html.haml
@@ -1,4 +1,4 @@
-- regs = registrations.attend
+- regs = registrations
 %table.roster
   %caption= "Liste für Workshop #{event.display_name}"
   %thead
