--- a/app/views/office/registrations/new.html.haml
+++ b/app/views/office/registrations/new.html.haml
@@ -2,7 +2,7 @@
   = block_navigation(["New Registration for #{parent.display_name}"])
 
   .content
-    %h2 New registration
+    %h2 New registration for #{parent.display_name}
 
     .inner
       = render 'form'
