--- a/app/views/office/events/_events.html.haml
+++ b/app/views/office/events/_events.html.haml
@@ -6,16 +6,16 @@
     %th.qty Participants
     %th.qty Team
     %th
+    %th
   %tbody
     - events.each do |e|
       %tr{:class => cycle(:odd, :even)}
         %td= e.display_name
         %td= l e.start_date
-        %td.qty= e.registrations.count
-        %td.qty= e.registrations.participants.count
-        %td.qty= e.registrations.team.count
-        %td
-          = link_to_show(office_event_path(e))
-          = link_to(icon(:group_go, :small, :alt => 'Show registrations'), office_event_registrations_path(e))
+        %td.qty= e.registrations.ok.count
+        %td.qty= e.registrations.ok.participants.count
+        %td.qty= e.registrations.ok.team.count
+        %td= link_to_show(office_event_path(e))
+        %td= link_to(icon(:group_go, :small, :alt => 'Show registrations'), office_event_registrations_path(e))
 = render 'office/shared/table_options', :table => events, :search => :display_name_contains
 .wat-cf
