--- a/app/views/office/registrations/_form.html.haml
+++ b/app/views/office/registrations/_form.html.haml
@@ -1,8 +1,9 @@
 = semantic_form_for [:office, parent, registration] do |r|
   -if registration.errors.any?
     #error_explanation
-      %h2= "#{pluralize(registration.errors.count, "error")} prohibited this registration from being saved"
+      %h3= "#{pluralize(registration.errors.count, "error")} prohibited this registration from being saved"
 
+  = r.semantic_errors(:angel_id, :event_id)
   = r.inputs :class => 'column_left' do
     - if parent.kind_of?(Event)
       = r.input :angel, options_for_angel_select(r)
