angel level list

--- a/app/views/office/angels/level.html.haml
+++ b/app/views/office/angels/level.html.haml
@@ -5,9 +5,9 @@
     = controls do |c|
       - add_button_to(c, :new)
 
-    %h2 Contact List
+    %h2 Angels List
 
     .inner
-      = render 'list', :angels => angels
+      = render 'level', :angels => angels
 
   = block_footer(angel_breadcrumbs)
