--- a/app/views/office/angels/index.html.haml
+++ b/app/views/office/angels/index.html.haml
@@ -5,6 +5,9 @@
     = controls do |c|
       - add_button_to(c, :new)
 
+    = controls do |c|
+      - add_button_to(c, "Download #{pluralize(angels.total_entries, 'VCard')}", params.merge(:format => :vcard, :icon => 'vcard'))
+
     %h2 Contact List
 
     .inner
