--- a/public/stylesheets/custom.sass
+++ b/public/stylesheets/custom.sass
@@ -143,7 +143,8 @@
   .column
     float: left
     width: 20%
-    margin-left: 0
+    min-width: 140px
+    margin: 0 14px 4px 0
 
 /*=============== formtastic additions/changes */
 
