--- a/app/views/office/angels/level.html.haml
+++ b/app/views/office/angels/level.html.haml
@@ -1,11 +1,10 @@
 .block
-  = block_navigation([['Contacts', :index], ['Levels', :level]])
+  = block_navigation(angel_navigation)
 
   .content
-    = controls do |c|
-      - add_button_to(c, "Download #{pluralize(angels.total_entries, 'VCard')}", params.merge(:format => :vcard, :icon => 'vcard'))
+    = angel_controls
 
-    %h2 Angels List
+    %h2 Angel Levels
 
     .inner
       = render 'level', :angels => angels
