--- a/app/views/office/shared/_search.html.haml
+++ b/app/views/office/shared/_search.html.haml
@@ -1,4 +1,6 @@
-= form_tag url_for, :method => :get, :class => :form do
-  = hidden_field_tag :rows, params[:rows]
-  = search_field_tag :q, nil, :class => 'xsearch_box'
-  <input type="submit" value="" class="search_submit">
+= form_for [:office, @search], :url => url_for, :html => { :method => :get, :class => :search} do|f|
+  .columns.wat-cf
+    .column.left
+      = hidden_field_tag :rows, params[:rows]
+      <input type="submit" value="" class="search_submit">
+      = f.text_field search, :placeholder => 'Search', :class => 'search_box'
