--- a/app/views/office/shared/_table_options.html.haml
+++ b/app/views/office/shared/_table_options.html.haml
@@ -7,11 +7,6 @@
 .row_count
   = pluralize table.total_entries, 'record'
 
-= form_for [:office, @search], :url => url_for, :html => { :method => :get, :class => :search} do|f|
-  .columns.wat-cf
-    .column.left
-      = hidden_field_tag :rows, params[:rows]
-      <input type="submit" value="" class="search_submit">
-      = f.text_field search, :placeholder => 'Search', :class => 'search_box'
+= render '/office/shared/search', :search => search
 
 .wat-cf
