add map button to show action

--- a/app/views/office/angels/show.html.haml
+++ b/app/views/office/angels/show.html.haml
@@ -6,8 +6,7 @@
       - add_button_to(c, :edit)
       - add_button_to(c, :delete)
 
-    = controls do |c|
-      - add_button_to(c, "Download VCard", params.merge(:format => :vcard, :icon => 'vcard'))
+    = angel_controls
 
     %h2 Details for #{angel.display_name}
 
