--- a/public/stylesheets/custom.sass
+++ b/public/stylesheets/custom.sass
@@ -5,6 +5,20 @@
   .qty
     text-align: right
 
+/*=============== completed table */
+#completed
+  position: relative
+  width: 40em
+  .name
+    width: 20em
+  .true, .false
+    width: 10px
+  .true
+    background-color: #9c3
+  .false
+    background-color: #db3737
+    
+
 /*=============== roster html table */
 .roster
   font-size: 10pt
