--- a/app/views/office/angels/show.html.haml
+++ b/app/views/office/angels/show.html.haml
@@ -6,7 +6,9 @@
       - add_button_to(c, :edit)
       - add_button_to(c, :delete)
 
-    = angel_controls
+    = controls do |c|
+      - add_button_to(c, "Map", params.merge(:search => { :id_eq => angel.id }, :action => :map, :icon => 'map_magnify'))
+      - add_button_to(c, "VCard", params.merge(:format => :vcard, :icon => 'vcard'))
 
     %h2 Details for #{angel.display_name}
 
