move sort order into controller

--- a/app/views/office/angels/_registrations.html.haml
+++ b/app/views/office/angels/_registrations.html.haml
@@ -7,7 +7,7 @@
       %th
       %th
   %tbody
-    - registrations.by_start_date.each do |r|
+    - registrations.each do |r|
       %tr{:class => cycle(:odd, :even)}
         %td= link_to(r.event_name, office_event_registrations_path(r.event))
         %td= r.level
