added pre, post, checked_in controllers

--- a/app/views/office/registrations/completed/_registrations.html.haml
+++ b/app/views/office/registrations/completed/_registrations.html.haml
@@ -11,5 +11,5 @@
         %tr
           %td.name= r.full_name
           = completed_registration_tds(r)
-          %td= render 'toggle', :registration => r
+          %td= completed_toggle(r)
 .wat-cf
