--- a/public/stylesheets/custom.sass
+++ b/public/stylesheets/custom.sass
@@ -4,21 +4,24 @@
     text-align: center
   .qty
     text-align: right
-
-/*=============== completed table */
-#completed
-  position: relative
-  width: 40em
   .name
-    width: 20em
-  .true, .false
-    width: 10px
+    width: 25ex
   .true
     background-color: #9c3
   .false
     background-color: #db3737
-    
 
+.color_dots
+  .true, .false
+    width: 14px
+    height: 14px
+    display: inline-block
+
+/*=============== completed/checked_in/post_event table */
+#completed, #checked_in, #post_event
+  position: relative
+  width: 40em
+    
 /*=============== roster html table */
 .roster
   font-size: 10pt
