--- a/app/views/office/registrations/checklist/index.html.haml
+++ b/app/views/office/registrations/checklist/index.html.haml
@@ -1,1 +1,16 @@
-= render 'office/registrations/print_layout', :layout => :registrations
+.block
+  = block_navigation(pre_event_navigation)
+
+  .content
+    = controls do |c|
+      - add_button_to(c, "Print checklist", :format => :pdf)
+
+    %h2
+      Checklist for #{event.display_name}
+
+    .inner
+      = render "registrations", :registrations => registrations
+
+  = block_footer(registration_breadcrumbs)
+= debug(controller.controller_name)
+= debug(controller.action_name)
