--- a/app/views/office/registrations/completed/index.html.haml
+++ b/app/views/office/registrations/completed/index.html.haml
@@ -12,4 +12,4 @@
 
       = render 'registrations', :registrations => registrations
 
-  = block_footer(completed_registration_breadcrumbs)
+  = block_footer(registration_submodule_breadcrumbs << ['Completed'])
