--- a/app/views/office/registrations/post/index.html.haml
+++ b/app/views/office/registrations/post/index.html.haml
@@ -12,4 +12,4 @@
       #post_event
         = render 'registrations', :registrations => registrations
 
-  = block_footer(registration_breadcrumbs)
+  = block_footer(registration_submodule_breadcrumbs << ['Post Event'])
