--- a/app/views/office/registrations/roster/index.html.haml
+++ b/app/views/office/registrations/roster/index.html.haml
@@ -10,4 +10,4 @@
     .inner
       = render "registrations", :registrations => registrations
 
-  = block_footer(registration_breadcrumbs)
+  = block_footer(registration_submodule_breadcrumbs << ['Roster'])
