--- a/app/views/office/registrations/checked_in/index.html.haml
+++ b/app/views/office/registrations/checked_in/index.html.haml
@@ -13,4 +13,4 @@
       #checked_in
         = render 'registrations', :registrations => registrations
 
-  = block_footer(registration_breadcrumbs)
+  = block_footer(registration_submodule_breadcrumbs << ['Checked In'])
