--- a/app/views/office/registrations/pre/index.html.haml
+++ b/app/views/office/registrations/pre/index.html.haml
@@ -15,4 +15,4 @@
     .inner
       = render 'registrations', :registrations => registrations
 
-  = block_footer(registration_breadcrumbs)
+  = block_footer(registration_submodule_breadcrumbs << ['Pre Event'])
