dash to simple dash

--- a/app/views/notifier/registration_confirmed.en.text.erb
+++ b/app/views/notifier/registration_confirmed.en.text.erb
@@ -3,7 +3,7 @@ Dear <%= @full_name %>,
 I hereby confirm that you are now fully signed up for the workshop <%= @event %>.
 
 Closer to the workshop date I will send out more detailed workshop
-information – in case you need that NOW or have other urgent questions,
+information - in case you need that NOW or have other urgent questions,
 please feel free to contact me:
 
 via email mikki.kitz@googlemail.com
