--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -146,8 +146,11 @@
 /*=============== attrtastic additions/changes */
 .attrtastic .column {
   float: left;
-  width: 20%;
-  min-width: 140px;
+  width: 180px;
+  margin: 0 14px 4px 0; }
+.attrtastic .column3 {
+  float: left;
+  width: 568px;
   margin: 0 14px 4px 0; }
 
 /*=============== formtastic additions/changes */
