--- a/public/stylesheets/custom.sass
+++ b/public/stylesheets/custom.sass
@@ -159,8 +159,12 @@
 .attrtastic
   .column
     float: left
-    width: 20%
-    min-width: 140px
+    width: 180px
+    margin: 0 14px 4px 0
+
+  .column3
+    float: left
+    width: 568px
     margin: 0 14px 4px 0
 
 /*=============== formtastic additions/changes */
