--- a/app/views/office/public_signups/_public_signup.html.haml
+++ b/app/views/office/public_signups/_public_signup.html.haml
@@ -1,9 +1,10 @@
 - r = public_signup.registration
 = render 'office/angels/angel', :angel => r.angel
 
+= render 'office/registrations/show_payment', :registration => r
+
 = semantic_attributes_for r do |attr|
-  = attr.attributes do
+  = attr.attributes :html => {:class => :column3} do
     = attr.attribute :special_requests, :value => registration_requests(r)
-    = attr.attribute :payment_method, :value => registration_payment_details(r)
     = attr.attribute :notes
 .wat-cf
