even / odd row toggling

--- a/app/views/office/public_signups/_approved.html.haml
+++ b/app/views/office/public_signups/_approved.html.haml
@@ -9,7 +9,7 @@
   
   %tbody
     - approved.each do |p|
-      %tr
+      %tr{:class => cycle(:odd, :even)}
         %td= p.full_name
         %td= p.gender
         %td= p.event_name
