--- a/app/views/office/registrations/pre/_role.html.haml
+++ b/app/views/office/registrations/pre/_role.html.haml
@@ -16,7 +16,7 @@
     - registrations.by_first_name.each do |r|
       %tr{:class => cycle(:odd, :even)}
         %td.name= link_to(r.full_name, [:office, r.angel])
-        %td.center= r.angel.gender.first
+        %td.center= r.gender.first
         %td= r.payment_method
         %td.center= checkmark_if(r.special_diet)
         %td.center= checkmark_if(r.backjack_rental)
