--- a/app/views/office/registrations/roster/index.html.haml
+++ b/app/views/office/registrations/roster/index.html.haml
@@ -3,7 +3,7 @@
 
   .content
     = controls do |c|
-      - add_button_to(c, "Print roster", :format => :pdf)
+      - add_button_to(c, "PDF Format", :format => :pdf)
 
     %h2 Roster preview of #{event.display_name}
 
