added roster password styling

--- a/public/stylesheets/custom.sass
+++ b/public/stylesheets/custom.sass
@@ -23,6 +23,12 @@
   width: 40em
     
 /*=============== roster html table */
+#password
+  font-style: normal
+  font-weight: bold
+  font-size: 1.2em
+  color: red
+
 .roster
   font-size: 10pt
   page-break-inside: avoid
