--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 %html
   %head
-    %title HAI Signups
+    %title= @title || 'HAI Event Signup'
     = javascript_include_tag :defaults
     = formtastic_stylesheet_link_tag
     = stylesheet_link_tag 'public_signup', :media => 'all'
