added XLS link on pre- & post- registration pages

--- a/app/views/office/registrations/post/index.html.haml
+++ b/app/views/office/registrations/post/index.html.haml
@@ -3,7 +3,8 @@
 
   .content
     = controls do |c|
-      - add_button_to(c, "Download VCards", params.merge(:format => :vcard, :icon => 'vcard', :controller => '/office/registrations', :action => :index))
+      - add_button_to(c, "VCards", params.merge(:format => :vcard, :icon => 'vcard', :controller => '/office/registrations', :action => :index))
+      - add_button_to(c, "XLS", params.merge(:format => :xls, :icon => 'page_excel', :controller => '/office/registrations', :action => :index))
 
     %h2= parent.display_name
 
