--- a/app/views/public_signups/_registration_form.html.haml
+++ b/app/views/public_signups/_registration_form.html.haml
@@ -35,31 +35,4 @@
   = r.input :notes, options_for_note(r)
 
 - content_for :javascript do
-  <script type="text/javascript">
-  var pm = function() {
-  var val = $("input[name='public_signup[registration_attributes][payment_method]']:checked").val();
-  var val1 = $(this).val();
-  //alert("clicked: " + val + ", " + val1);
-  if (val == 'Post') {
-  $('#internet').hide();
-  $('#post').fadeIn();
-  } else if (val == 'Internet') {
-  $('#internet').fadeIn();
-  $('#post').hide();
-  } else {
-  $('#internet').hide();
-  $('#post').hide();
-  }
-  }
-  $("input[name='public_signup[registration_attributes][payment_method]']").click(pm);
-  pm();
-  (function(){
-  var err = $('.error').first();
-  if (err.length==0) return;
-  var f = $('select', err)
-  if (f.length==0) {
-  f = $('input', err);
-  }
-  if (f) f.focus();
-  })();
-  </script>
+  = javascript_include_tag "public_signup"
