--- a/public/stylesheets/public_signup.css
+++ b/public/stylesheets/public_signup.css
@@ -1,36 +1,40 @@
-body {
+#main {
    font-family: Georgia, serif;
    font-size: 12px;
    line-height: 16px;
 }
 
-.instructions {
+#main .instructions {
    border: 1px solid red;
    padding: 4px;
    background-color: #fc9;
    margin: 5px 0;
 }
 
-.title {
+#main .title {
    font-size: 15px;
    font-weight: bold;
    color: #c33021;
    padding-bottom: 10px;
 }
 
-label {
+#main label {
    font-weight: bold;
 }
 
-li.error {
+#main li.error {
    background-color: #FFE6CC;
+}
+
+#main #error_explanation h2 {
+   color: red;
 }
 
 form.formtastic fieldset > ol > li p.inline-errors {
    clear: both;
 }
 
-.public_signup #lang p {
+.public_signup #lang {
    font-weight: bold;
    font-size: 15px;
    font-family: Verdana, sans-serif;
@@ -38,6 +42,7 @@ form.formtastic fieldset > ol > li p.inline-errors {
    margin: 1em 0;
 }
 
-.public_signup #lang p a {
+.public_signup p #lang a {
     color: #e84f2f;
 }
+
